@@ -1,6 +1,11 @@
 # ChangeLog for www-client/w3mir
-# Copyright 2000-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/w3mir/ChangeLog,v 1.16 2013/02/23 20:29:32 zmedico Exp $
+# Copyright 2000-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-client/w3mir/ChangeLog,v 1.17 2014/07/15 09:14:10 zlogene Exp $
+
+*w3mir-1.0.10-r2 (15 Jul 2014)
+
+  15 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> +w3mir-1.0.10-r2.ebuild:
+  Revision bump: EAPI=5
 
   23 Feb 2013; Zac Medico <zmedico@gentoo.org> w3mir-1.0.10-r1.ebuild:
   Add ~arm-linux and ~x86-linux keywords.
